--- a/src/UDS.Net.Web/Views/Visit/Index.cshtml
+++ b/src/UDS.Net.Web/Views/Visit/Index.cshtml
@@ -81,69 +81,74 @@
     <tbody>
         @if (Model.Visits.Count() > 0)
         {
-    @foreach (var item in Model.Visits)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.VisitDate)
-            </td>
-            <td>
-                <a asp-controller="Participation" asp-action="Details" asp-route-id="@item.FriendlyId">@Html.DisplayFor(modelItem => item.FriendlyId)</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-                @if (item.Status == VisitStatus.Prioritized)
-                {
-        @Html.DisplayFor(modelItem => item.PriorityWeight)}
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsSubmittedToNACC)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VisitNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VisitType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CoordinatorInitials)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClinicianInitials)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SocialWorkerInitials)
-            </td>
-            <td class="text-muted">
-                <small>
-                    <span class="d-block">@item.ModifiedBy</span>
-                </small>
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.Id">View</a> |
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-            </td>
-        </tr>} }
-                else
-                {<tr>
-                    <td colspan="9">
-                        <p class="lead text-center p-5 font-italic">
-                            No Visits Found
-                        </p>
+            @foreach (var item in Model.Visits)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VisitDate)
+                    </td>
+                    <td>
+                        <a asp-controller="Participation" asp-action="Details" asp-route-id="@item.FriendlyId">@Html.DisplayFor(modelItem => item.FriendlyId)</a>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                        @if (item.Status == VisitStatus.Prioritized)
+                        {
+                            @Html.DisplayFor(modelItem => item.PriorityWeight)
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsSubmittedToNACC)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VisitNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VisitType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CoordinatorInitials)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClinicianInitials)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SocialWorkerInitials)
+                    </td>
+                    <td class="text-muted">
+                        <small>
+                            <span class="d-block">@item.ModifiedBy</span>
+                        </small>
+                    </td>
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.Id">View</a> |
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
-                    
-                }
+            } }
+        else
+        {
+            <tr>
+                <td colspan="9">
+                    <p class="lead text-center p-5 font-italic">
+                        No Visits Found
+                    </p>
+                </td>
+            </tr>
+
+        }
     </tbody>
 </table>
 
 @{ var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
-       var nextDisabled = !Model.HasNextPage? "disabled" : ""; }
+    var nextDisabled = !Model.HasNextPage ? "disabled" : ""; }
 
 <a asp-action="Index"
    asp-route-pageNumber="@(Model.PageNumber - 1)"
    asp-route-visitStatus="@Model.VisitStatus"
    asp-route-friendlyId="@Model.FriendlyId"
+   asp-route-isSubmittedToNACC="@Model.IsSubmittedToNACC"
    class="btn btn-outline-secondary @prevDisabled">
     Previous
 </a>
@@ -151,6 +156,7 @@
    asp-route-pageNumber="@(Model.PageNumber + 1)"
    asp-route-visitStatus="@Model.VisitStatus"
    asp-route-friendlyId="@Model.FriendlyId"
+   asp-route-isSubmittedToNACC="@Model.IsSubmittedToNACC"
    class="btn btn-outline-secondary @nextDisabled">
     Next
 </a>
