Cleans up css classes on inputs

--- a/src/UDS.Net.Web/Views/NeuropsychologicalBatteryScores/Edit.cshtml
+++ b/src/UDS.Net.Web/Views/NeuropsychologicalBatteryScores/Edit.cshtml
@@ -113,6 +113,7 @@
                                     <div>
                                         <input asp-for="MoCALanguageOther" type="text" name="MoCALanguageOther" class="form-control" disabled>
                                     </div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
@@ -194,7 +195,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCATrials" type="number" id="MoCATrials[1]" name="MoCATrials" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCATrials" type="number" id="MoCATrials[1]" name="MoCATrials">
                                 </div>
                             </td>
                             <td>
@@ -211,7 +212,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCACube" type="number" id="MoCACube[1]" name="MoCACube" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCACube" type="number" id="MoCACube[1]" name="MoCACube">
                                 </div>
                             </td>
                             <td>
@@ -228,7 +229,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAClockContour" type="number" id="MoCAClockContour[1]" name="MoCAClockContour" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAClockContour" type="number" id="MoCAClockContour[1]" name="MoCAClockContour">
                                 </div>
                             </td>
                             <td>
@@ -245,7 +246,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAClockNumbers" type="number" id="MoCAClockNumbers[1]" name="MoCAClockNumbers" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAClockNumbers" type="number" id="MoCAClockNumbers[1]" name="MoCAClockNumbers">
                                 </div>
                             </td>
                             <td>
@@ -262,7 +263,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAHands" type="number" id="MoCAHands[1]" name="MoCAHands" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAHands" type="number" id="MoCAHands[1]" name="MoCAHands">
                                 </div>
                             </td>
                             <td>
@@ -279,7 +280,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCANaming" type="number" id="MoCANaming[1]" name="MoCANaming" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCANaming" type="number" id="MoCANaming[1]" name="MoCANaming">
                                 </div>
                             </td>
                             <td>
@@ -296,7 +297,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="form-control" asp-for="MoCARegistration" type="number" id="MoCARegistration[1]" name="MoCARegistration" class="form-control">
+                                    <input class="form-control" asp-for="MoCARegistration" type="number" id="MoCARegistration[1]" name="MoCARegistration">
                                 </div>
                             </td>
                             <td>
@@ -313,7 +314,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCADigits" type="number" id="MoCADigits[1]" name="MoCADigits" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCADigits" type="number" id="MoCADigits[1]" name="MoCADigits">
                                 </div>
                             </td>
                             <td>
@@ -330,7 +331,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCALetter" type="number" id="MoCALetter[1]" name="MoCALetter" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCALetter" type="number" id="MoCALetter[1]" name="MoCALetter">
                                 </div>
                             </td>
                             <td>
@@ -347,7 +348,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCASerial" type="number" id="MoCASerial[1]" name="MoCASerial" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCASerial" type="number" id="MoCASerial[1]" name="MoCASerial">
                                 </div>
                             </td>
                             <td>
@@ -364,7 +365,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCARepetition" type="number" id="MoCARepetition[1]" name="MoCARepetition" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCARepetition" type="number" id="MoCARepetition[1]" name="MoCARepetition">
                                 </div>
                             </td>
                             <td>
@@ -381,7 +382,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAFluency" type="number" id="MoCAFluency[1]" name="MoCAFluency" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAFluency" type="number" id="MoCAFluency[1]" name="MoCAFluency">
                                 </div>
                             </td>
                             <td>
@@ -398,7 +399,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAAbstraction" type="number" id="MoCAAbstraction[1]" name="MoCAAbstraction" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAAbstraction" type="number" id="MoCAAbstraction[1]" name="MoCAAbstraction">
                                 </div>
                             </td>
                             <td>
@@ -415,7 +416,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCANoCue" type="number" id="MoCANoCue[1]" name="MoCANoCue" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCANoCue" type="number" id="MoCANoCue[1]" name="MoCANoCue">
                                 </div>
                             </td>
                             <td>
@@ -432,7 +433,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="form-control" asp-for="MoCACategoryCue" type="number" id="MoCACategoryCue[1]" name="MoCACategoryCue" class="form-control">
+                                    <input class="form-control" asp-for="MoCACategoryCue" type="number" id="MoCACategoryCue[1]" name="MoCACategoryCue">
                                 </div>
                             </td>
                             <td>
@@ -449,7 +450,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="form-control" asp-for="MoCARecognition" type="number" id="MoCARecognition[1]" name="MoCARecognition" class="form-control">
+                                    <input class="form-control" asp-for="MoCARecognition" type="number" id="MoCARecognition[1]" name="MoCARecognition">
                                 </div>
                             </td>
                             <td>
@@ -466,7 +467,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCADate" type="number" id="MoCADate[1]" name="MoCADate" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCADate" type="number" id="MoCADate[1]" name="MoCADate">
                                 </div>
                             </td>
                             <td>
@@ -483,7 +484,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAMonth" type="number" id="MoCAMonth[1]" name="MoCAMonth" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAMonth" type="number" id="MoCAMonth[1]" name="MoCAMonth">
                                 </div>
                             </td>
                             <td>
@@ -500,7 +501,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAYear" type="number" id="MoCAYear[1]" name="MoCAYear" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAYear" type="number" id="MoCAYear[1]" name="MoCAYear">
                                 </div>
                             </td>
                             <td>
@@ -517,7 +518,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCADay" type="number" id="MoCADay[1]" name="MoCADay" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCADay" type="number" id="MoCADay[1]" name="MoCADay">
                                 </div>
                             </td>
                             <td>
@@ -534,7 +535,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCAPlace" type="number" id="MoCAPlace[1]" name="MoCAPlace" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCAPlace" type="number" id="MoCAPlace[1]" name="MoCAPlace">
                                 </div>
                             </td>
                             <td>
@@ -551,7 +552,7 @@
                             </td>
                             <td>
                                 <div class="form-check form-check-inline form-group">
-                                    <input class="totalScoreSum form-control" asp-for="MoCACity" type="number" id="MoCACity[1]" name="MoCACity" class="form-control">
+                                    <input class="totalScoreSum form-control" asp-for="MoCACity" type="number" id="MoCACity[1]" name="MoCACity">
                                 </div>
                             </td>
                             <td>
