--- a/src/UDS.Net.Web/Views/CoParticipantDemographics/EditFVP.cshtml
+++ b/src/UDS.Net.Web/Views/CoParticipantDemographics/EditFVP.cshtml
@@ -104,6 +104,7 @@
                         <td>
                             <label>4a. @Html.DisplayNameFor(model => model.EthnicOrigins)</label>
                             <div><span asp-validation-for="EthnicOrigins" class="text-danger"></span></div>
+                            <div><span asp-validation-for="EthnicOriginsOther" class="text-danger"></span></div>
                         </td>
                         <td colspan="3">
                             <div>
